Fixes summer note button style so it's readable

--- a/app/styles/components/summer-note.less
+++ b/app/styles/components/summer-note.less
@@ -12,3 +12,11 @@
 .note-editor .note-toolbar {
   border-bottom-color: #cccccc;
 }
+
+.note-editor .btn-primary {
+  background-color: white;
+}
+
+.note-editor .btn-primary.disabled:hover {
+  color: white;
+}
